# AeroStack-RL

./: .gitignore  AEROSTACK_RL_PROGRAM_PLAN.md  README.md  URS.md
.devcontainer/: Dockerfile  devcontainer.json  requirements-rl.txt
docs/: GUI_SETUP.md
scripts/: run_container.sh  setup.sh  verify_sim.sh
src/aerostack_bringup/: CMakeLists.txt  package.xml
src/aerostack_fcu_bridge/: package.xml  setup.py
src/aerostack_fcu_bridge/aerostack_fcu_bridge/: bridge_node.py
src/aerostack_interfaces/: CMakeLists.txt  package.xml
src/aerostack_interfaces/msg/: RlAction.msg  UavState.msg
src/aerostack_rl/aerostack_gym/: package.xml  setup.cfg  setup.py
src/aerostack_rl/policy_runner/: package.xml  setup.py
src/aerostack_sim/: CMakeLists.txt  package.xml
src/aerostack_sim/config/: ros_gz_bridge.yaml
src/aerostack_sim/launch/: sitl.launch.py
src/aerostack_sim/models/aerostack_drone/: model.config  model.sdf
src/aerostack_sim/worlds/: aerostack_world.sdf
src/aerostack_supervisor/: package.xml  setup.cfg  setup.py
